Update the search string when the document is reloaded

https://bugzilla.gnome.org/show_bug.cgi?id=694143